src/type_atoms/snapshots/syn_state_machine__type_atoms__typed_literals__tests__it_matches_simple_abi.snap
---
source: src/type_atoms/typed_literals.rs
expression: "(insta_match_test!(+ parse StringLit : \"C\"),\n    insta_match_test!(* peek StringLit : \"C\"))"
---
(
    Ok(
        StringLit {
            raw: "\"C\"",
            value: None,
            num_hashes: None,
            start_suffix: 3,
        },
    ),
    Some(
        1,
    ),
)
